--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -42,6 +42,7 @@ jobs:
         curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSLg1.1.1/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
         ls -l
         ${{matrix.UNZIP_COMMAND}} openSSL.zip
+      shell: cmd
     - name: Install windows dependencies
       run: |
         choco install winflexbison3
