--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -15,30 +15,30 @@ jobs:
       matrix:
         os: ['ubuntu-16.04', 'ubuntu-18.04', 'windows-2019', 'macos-10.15']
         include: 
-          - os: ubuntu-16.04
-            OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
-            UNZIP_COMMAND: unzip -qa
-            ZIP_COMMAND: zip -r
-          - os: ubuntu-18.04
-            OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
-            UNZIP_COMMAND: unzip -qa
-            ZIP_COMMAND: zip -r
+          # - os: ubuntu-16.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ZIP_COMMAND: zip -r
+          # - os: ubuntu-18.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ZIP_COMMAND: zip -r
           - os: windows-2019
             OPEN_SSL_FILE: openSSL_1_1_1g_win.zip
             UNZIP_COMMAND: 7z x
             ZIP_COMMAND: 7z a -r
-          - os: macos-10.15
-            OPEN_SSL_FILE: openSSL_1_1_1g_mac.zip
-            UNZIP_COMMAND: unzip -qa
-            ZIP_COMMAND: zip -r
+          # - os: macos-10.15
+          #   OPEN_SSL_FILE: openSSL_1_1_1g_mac.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ZIP_COMMAND: zip -r
     steps:
     - name: Download precompiled openSSL
       run: |
-        ls -l
+        dir
         echo curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSLg1.1.1/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
         curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSLg1.1.1/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
         echo Download done
-        ls -l
+        dir
         ${{matrix.UNZIP_COMMAND}} openSSL.zip
     - name: Download QtBase Sources
       run: |
