--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ['ubuntu-16.04', 'ubuntu-18.04', 'windows-2019', 'macos-10.15']
+        #os: ['ubuntu-16.04', 'ubuntu-18.04', 'windows-2019', 'macos-10.15']
+        os: [windows-2019']
         include: 
           # - os: ubuntu-16.04
           #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
