--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -20,14 +20,16 @@ jobs:
           #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
           #   UNZIP_COMMAND: unzip -qa
           #   ZIP_COMMAND: zip -r
-          # - os: ubuntu-18.04
-          #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
-          #   UNZIP_COMMAND: unzip -qa
-          #   ZIP_COMMAND: zip -r
+          - os: ubuntu-18.04
+            OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
+            UNZIP_COMMAND: unzip -qa
+            ZIP_COMMAND: zip -r
+            SHELL: bash
           - os: windows-2019
             OPEN_SSL_FILE: openSSL_1_1_1g_win.zip
             UNZIP_COMMAND: 7z x
             ZIP_COMMAND: 7z a -r
+            SHELL: cmd
           # - os: macos-10.15
           #   OPEN_SSL_FILE: openSSL_1_1_1g_mac.zip
           #   UNZIP_COMMAND: unzip -qa
@@ -35,32 +37,19 @@ jobs:
     steps:
     - name: Download precompiled openSSL
       run: |
-        dir
-        echo curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSLg1.1.1/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
         curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSLg1.1.1/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
-        echo Download done
-        dir
         ${{matrix.UNZIP_COMMAND}} openSSL.zip
-      shell: cmd
+      shell: ${{matrix.SHELL}}
     - name: Download QtBase Sources
       run: |
         curl -L https://github.com/qt/qtbase/archive/v5.13.1.zip -o QtBase.zip
         ${{matrix.UNZIP_COMMAND}} QtBase.zip
         mv qtbase-5.13.1 Qt_build
+      shell: ${{matrix.SHELL}}
     - name: Install windows dependencies
       run: |
         choco install winflexbison3
         choco install jom
-        choco install VisualCppBuildTools
-        choco install strawberryperl
-        export PATH=$PATH:";C:\Strawberry\perl\bin"
-        # We have to remove this perl executable because it clashes with strawberry perl.
-        # Strawberry perl is needed because the perl version that comes with git is too old to compile Qt
-        rm 'C:\Program Files\Git\usr\bin\perl.exe'
-        unset CC
-        unset CC_FOR_BUILD
-        unset CXX
-        unset CXX_FOR_BUILD
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Install Linux Dependencies
