--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -13,8 +13,6 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        #os: ['ubuntu-16.04', 'ubuntu-18.04', 'windows-2019', 'macos-10.15']
-        os: ['windows-2019']
         include: 
           # - os: ubuntu-16.04
           #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
@@ -69,7 +67,7 @@ jobs:
         copy C:\ProgramData\chocolatey\bin\win_flex.exe C:\ProgramData\chocolatey\bin\flex.exe
         copy C:\ProgramData\chocolatey\bin\win_bison.exe C:\ProgramData\chocolatey\bin\bison.exe
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        call .\configure.bat -release -opensource -confirm-license -prefix "$HOME\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-IC:\Users\travis\build\ChristianFeldmann\YUViewQt\openSSL\include" "-LC:\Users\travis\build\ChristianFeldmann\YUViewQt\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
+        call .\configure.bat -release -opensource -confirm-license -prefix "$GITHUB_WORKSPACE\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-I$GITHUB_WORKSPACE\openSSL\include" "-L$GITHUB_WORKSPACE\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
         jom
         jom install
       shell: cmd
@@ -77,14 +75,14 @@ jobs:
     - name: Build Mac
       run: |
         cd Qt_build
-        ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${TRAVIS_BUILD_DIR}/openSSL/include/ -L ${TRAVIS_BUILD_DIR}/openSSL/ -nomake examples
+        ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
         make -j 2
         make install
       if: matrix.os == 'macos-10.15'
     - name: Build Linux
       run: |
         cd Qt_build
-        ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${TRAVIS_BUILD_DIR}/openSSL/include/ -L ${TRAVIS_BUILD_DIR}/openSSL/ -nomake examples -system-xcb
+        ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
         make -j 2
         make install
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
