--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -53,17 +53,18 @@ jobs:
         choco install jom
       shell: cmd
       if: matrix.os == 'windows-2019'
-    - name: Install Linux Dependencies
-      run: |
-        sudo cp /etc/apt/sources.list /etc/apt/sources.list~
-        sudo sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
-        sudo apt-get update
-        sudo apt-get build-dep qt5-default
-        sudo apt-get install libxcb-xinerama0-dev
-      if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
+    # - name: Install Linux Dependencies
+    #   run: |
+    #     sudo cp /etc/apt/sources.list /etc/apt/sources.list~
+    #     sudo sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
+    #     sudo apt-get update
+    #     sudo apt-get build-dep qt5-default
+    #     sudo apt-get install libxcb-xinerama0-dev
+    #   if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Build Windows
       run: |
         cd Qt_build
+        mkdir .git
         copy C:\ProgramData\chocolatey\bin\win_flex.exe C:\ProgramData\chocolatey\bin\flex.exe
         copy C:\ProgramData\chocolatey\bin\win_bison.exe C:\ProgramData\chocolatey\bin\bison.exe
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
@@ -75,6 +76,7 @@ jobs:
     - name: Build Mac
       run: |
         cd Qt_build
+        mkdir .git
         pwd
         ls
         echo ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
@@ -87,6 +89,7 @@ jobs:
         pwd
         ls
         cd Qt_build
+        mkdir .git
         echo ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
         ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
         make -j 2
