--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -79,8 +79,8 @@ jobs:
         mkdir .git
         pwd
         ls
-        echo ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
-        ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
+        echo ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
+        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
         make -j 2
         make install
       if: matrix.os == 'macos-10.15'
@@ -90,8 +90,8 @@ jobs:
         ls
         cd Qt_build
         mkdir .git
-        echo ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
-        ./configure -release -opensource -confirm-license -prefix $QT_INSTALL_DIR -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
+        echo ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
+        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
         make -j 2
         make install
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
