--- a/.github/workflows/openssl.yml
+++ b/.github/workflows/openssl.yml
@@ -102,7 +102,10 @@ jobs:
         name: ${{matrix.ARTIFACT_NAME}}
         path: artifact
     - name: Zip files
-      run: ${{matrix.ZIP_COMMAND}} ../${{matrix.ARTIFACT_NAME}}.zip *
+      run: |
+        cd artifact
+        ${{matrix.ZIP_COMMAND}} ../${{matrix.ARTIFACT_NAME}}.zip *
+        cd ..
     - name: Upload
       uses: actions/upload-release-asset@v1.0.1
       env:
