--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -14,14 +14,16 @@ jobs:
     strategy:
       matrix:
         include: 
-          # - os: ubuntu-16.04
-          #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
-          #   UNZIP_COMMAND: unzip -qa
-          #   ZIP_COMMAND: zip -r
+          - os: ubuntu-16.04
+            OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
+            UNZIP_COMMAND: unzip -qa
+            ZIP_COMMAND: zip -r
+            ARTIFACT_NAME: qtBase_5.14.2_xenial
           - os: ubuntu-18.04
             OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
             UNZIP_COMMAND: unzip -qa
             ZIP_COMMAND: zip -r
+            ARTIFACT_NAME: qtBase_5.14.2_bionic
           # - os: windows-2019
           #   OPEN_SSL_FILE: openSSL_1_1_1g_win.zip
           #   UNZIP_COMMAND: 7z x
@@ -44,9 +46,9 @@ jobs:
       if: matrix.os != 'windows-2019'
     - name: Download QtBase Sources
       run: |
-        curl -L https://github.com/qt/qtbase/archive/v5.13.1.zip -o QtBase.zip
+        curl -L https://github.com/qt/qtbase/archive/v5.14.2.zip -o QtBase.zip
         ${{matrix.UNZIP_COMMAND}} QtBase.zip
-        mv qtbase-5.13.1 Qt_build
+        mv qtbase-5.14.2 Qt_build
     - name: Install windows dependencies
       run: |
         choco install winflexbison3
@@ -54,7 +56,7 @@ jobs:
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Install Linux Dependencies
-      run: sudo apt install build-essential perl python git '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev libatspi2.0-0
+      run: sudo apt install build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Build Windows
       run: |
@@ -74,29 +76,27 @@ jobs:
         mkdir .git
         pwd
         ls
-        echo ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
-        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
+        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt_install -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
         make -j 2
         make install
       if: matrix.os == 'macos-10.15'
     - name: Build Linux
       run: |
-        pwd
-        ls
         cd Qt_build
         mkdir .git
-        echo ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
-        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -system-xcb
+        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt_install -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples -qt-xcb
         make -j 2
         make install
+        cd ..
+        mkdir Qt
+        cp -R Qt_install/bin Qt_install/lib Qt_install/include Qt_install/mkspecs Qt_install/plugins Qt
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
-    # - name: Upload Artifact
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: ${{matrix.ARTIFACT_NAME}}
-    #     path: artifact
-    # - name: Zip files
-    #   run: ${{matrix.ZIP_COMMAND}} ${{matrix.ARTIFACT_NAME}}.zip artifact
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{matrix.ARTIFACT_NAME}}
+        path: Qt
+    
     # - name: Upload
     #   uses: actions/upload-release-asset@v1.0.1
     #   env:
