--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -14,24 +14,25 @@ jobs:
     strategy:
       matrix:
         include: 
-          - os: ubuntu-16.04
-            OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
-            UNZIP_COMMAND: unzip -qa
-            ZIP_COMMAND: zip -r
-            ARTIFACT_NAME: qtBase_5.14.2_xenial
-          - os: ubuntu-18.04
-            OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
-            UNZIP_COMMAND: unzip -qa
-            ZIP_COMMAND: zip -r
-            ARTIFACT_NAME: qtBase_5.14.2_bionic
+          # - os: ubuntu-16.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_xenial.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ZIP_COMMAND: zip -r
+          #   ARTIFACT_NAME: qtBase_5.14.2_xenial
+          # - os: ubuntu-18.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1g_ubuntu_bionic.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ZIP_COMMAND: zip -r
+          #   ARTIFACT_NAME: qtBase_5.14.2_bionic
           # - os: windows-2019
           #   OPEN_SSL_FILE: openSSL_1_1_1g_win.zip
           #   UNZIP_COMMAND: 7z x
           #   ZIP_COMMAND: 7z a -r
-          # - os: macos-10.15
-          #   OPEN_SSL_FILE: openSSL_1_1_1g_mac.zip
-          #   UNZIP_COMMAND: unzip -qa
-          #   ZIP_COMMAND: zip -r
+          - os: macos-10.15
+            OPEN_SSL_FILE: openSSL_1_1_1g_mac.zip
+            UNZIP_COMMAND: unzip -qa
+            ZIP_COMMAND: zip -r
+            ARTIFACT_NAME: qtBase_5.14.2_mac
     steps:
     - name: Download precompiled openSSL (windows)
       run: |
@@ -74,11 +75,12 @@ jobs:
       run: |
         cd Qt_build
         mkdir .git
-        pwd
-        ls
         ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt_install -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples
         make -j 2
         make install
+        cd ..
+        mkdir Qt
+        cp -R Qt_install/bin Qt_install/lib Qt_install/include Qt_install/mkspecs Qt_install/plugins Qt
       if: matrix.os == 'macos-10.15'
     - name: Build Linux
       run: |
