--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -64,6 +64,8 @@ jobs:
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Build Windows
       run: |
+        echo -I${GITHUB_WORKSPACE}\openSSL\include
+        echo "-I${GITHUB_WORKSPACE}\openSSL\include"
         dir
         cd Qt_build
         mkdir .git
@@ -72,8 +74,8 @@ jobs:
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         echo call .\configure.bat -release -opensource -confirm-license -prefix "${GITHUB_WORKSPACE}\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-I${GITHUB_WORKSPACE}\openSSL\include" "-L${GITHUB_WORKSPACE}\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
         call .\configure.bat -release -opensource -confirm-license -prefix "${GITHUB_WORKSPACE}\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-I${GITHUB_WORKSPACE}\openSSL\include" "-L${GITHUB_WORKSPACE}\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
-        jom
-        jom install
+        #jom
+        #jom install
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Build Mac/Linux
