--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -64,6 +64,7 @@ jobs:
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Build Windows
       run: |
+        echo $GITHUB_WORKSPACE
         echo -I${GITHUB_WORKSPACE}\openSSL\include
         echo "-I${GITHUB_WORKSPACE}\openSSL\include"
         dir
