--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -64,17 +64,14 @@ jobs:
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Build Windows
       run: |
-        echo $GITHUB_WORKSPACE
-        echo -I${GITHUB_WORKSPACE}\openSSL\include
-        echo "-I${GITHUB_WORKSPACE}\openSSL\include"
         dir
         cd Qt_build
         mkdir .git
         copy C:\ProgramData\chocolatey\bin\win_flex.exe C:\ProgramData\chocolatey\bin\flex.exe
         copy C:\ProgramData\chocolatey\bin\win_bison.exe C:\ProgramData\chocolatey\bin\bison.exe
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        echo call .\configure.bat -release -opensource -confirm-license -prefix "${GITHUB_WORKSPACE}\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-I${GITHUB_WORKSPACE}\openSSL\include" "-L${GITHUB_WORKSPACE}\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
-        call .\configure.bat -release -opensource -confirm-license -prefix "${GITHUB_WORKSPACE}\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-I${GITHUB_WORKSPACE}\openSSL\include" "-L${GITHUB_WORKSPACE}\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
+        echo call .\configure.bat -release -opensource -confirm-license -prefix "d:\a\YUViewQt\YUViewQt\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-Id:\a\YUViewQt\YUViewQt\openSSL\include" "-Ld:\a\YUViewQt\YUViewQt\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
+        call .\configure.bat -release -opensource -confirm-license -prefix "d:\a\YUViewQt\YUViewQt\build\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-Id:\a\YUViewQt\YUViewQt\openSSL\include" "-Ld:\a\YUViewQt\YUViewQt\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
         #jom
         #jom install
       shell: cmd
