--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -71,20 +71,19 @@ jobs:
         copy C:\ProgramData\chocolatey\bin\win_bison.exe C:\ProgramData\chocolatey\bin\bison.exe
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         call .\configure.bat -release -opensource -confirm-license -prefix "d:\\a\YUViewQt\\YUViewQt\\build\\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-Id:\\a\\YUViewQt\\YUViewQt\\openSSL\\include" "-Ld:\\a\\YUViewQt\\YUViewQt\\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
-        #jom
-        #jom install
+        jom
+        jom install
+        mkdir Qt
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Build Mac/Linux
       run: |
         cd Qt_build
         mkdir .git
-        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt_install -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples ${{matrix.CONFIGURE_EXTRA}}
+        ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples ${{matrix.CONFIGURE_EXTRA}}
         make -j 2
         make install
         cd ..
-        mkdir Qt
-        cp -R Qt_install/bin Qt_install/lib Qt_install/include Qt_install/mkspecs Qt_install/plugins Qt
       if: matrix.os != 'windows-2019'
     - name: Zip files
       run: |
