--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -69,9 +69,9 @@ jobs:
         call .\configure.bat -release -opensource -confirm-license -prefix "d:\\a\YUViewQt\\YUViewQt\\build\\Qt" -opengl dynamic -platform win32-msvc2015 -openssl "-Id:\\a\\YUViewQt\\YUViewQt\\openSSL\\include" "-Ld:\\a\\YUViewQt\\YUViewQt\\openSSL" -nomake examples -nomake tests -no-feature-sql -no-direct2d
         jom
         jom install
-        cd ..\Qt\build\Qt
-        7z a -r ../../../${{matrix.ARTIFACT_NAME}}.zip *
-        cd ..\..\..
+        cd ..
+        7z a -r ${{matrix.ARTIFACT_NAME}}.zip Qt
+        dir
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Build Mac/Linux
@@ -81,9 +81,8 @@ jobs:
         ./configure -release -opensource -confirm-license -prefix ${GITHUB_WORKSPACE}/Qt -openssl -I ${GITHUB_WORKSPACE}/openSSL/include/ -L ${GITHUB_WORKSPACE}/openSSL/ -nomake examples ${{matrix.CONFIGURE_EXTRA}}
         make -j 2
         make install
-        cd ../Qt
-        zip -r ../${{matrix.ARTIFACT_NAME}}.zip Q
         cd ..
+        zip -r ${{matrix.ARTIFACT_NAME}}.zip Qt
       if: matrix.os != 'windows-2019'
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
