--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -43,6 +43,7 @@ jobs:
         dir
         set PATH="%path%;d:\a\YUViewQt\YUViewQt\Qt\bin\"
         echo %path%
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         cd Qttools/src/windeployqt
         d:\a\YUViewQt\YUViewQt\Qt\bin\qmake
         nmake
