--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build Windows
       run: |
         dir
-        set PATH="%path%;d:\\a\\YUViewQt\\YUViewQt\\Qt\\bin\\"
+        set PATH="%path%;d:\\a\\YUViewQt\\YUViewQt\\Qt\\bin"
         echo %path%
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         cd Qttools/src/windeployqt
