--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Build Windows
       run: |
         dir
+        dir Qttools
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         cd Qttools/src/windeployqt
         d:\a\YUViewQt\YUViewQt\Qt\bin\qmake
