--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -43,7 +43,9 @@ jobs:
         dir
         dir Qttools
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        cd Qttools/src/windeployqt
+        cd Qttools
+        d:\a\YUViewQt\YUViewQt\Qt\bin\qmake
+        cd src/windeployqt
         d:\a\YUViewQt\YUViewQt\Qt\bin\qmake
         nmake
         cd ..\..\..\
@@ -53,7 +55,9 @@ jobs:
       if: matrix.os == 'windows-2019'
     - name: Build Mac
       run: |
-        cd Qttools/src/macdeployqt
+        cd Qttools
+        ../../../Qt/bin/qmake
+        cd src/macdeployqt
         pwd
         ls
         ../../../Qt/bin/qmake
